--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,8 +27,6 @@
                   <ul>
                       <li><a class="link" href="projects.html" >Projects</a></li>
                       <li><a class="link"  href="aboutMe.html" >About</a></li>
-                      <!-- <li><a class="link" href="images/Resume_Pangtay_2020.pdf" target="_blank" >RESUME</a></li> -->
-                      <!-- <li><a class="link" href="contact.html" >Contact</a></li> -->
                   </ul>
               </div>
             </nav>
@@ -37,12 +35,13 @@
         <section class="bio-section">
             <div id="about" class="bio-info">
 
-                <h1>I'm Kathy Pangtay. A <br> UI/UX Designer and <br>Front-end Developer.</h1>
+                <h1>I'm Kathy Pangtay. A <br> UI/UX Designer and <br>Frontend Developer.</h1>
                 <div class="about-paragraph ">
                     <h3 style="text-align: initial">WHO I AM.</h3>
-                    <p>I’m currently available for in-house or remote work and am willing to relocate. I’ve been creating user-centered interfaces and digital experiences for more than seven years. During the last two years I have studied to become a developer which has allowed me to work on projects from initial exploration to pixel perfect code. I’m able to incorporate those skills and experiences to bridge the gap between design and development. I enjoy working on projects that require me to push beyond my boundaries and acquire new skills and knowledge in order to succeed. I have extensive experience working within multidisciplinary teams and truly enjoy working with others.</p>
+                    <p>I’m currently available for in-house or remote work and am willing to relocate. I’ve been creating user-centered interfaces and digital experiences for more than eight years. Two years ago I transiitioned to frontend development which has allowed me to work on projects from initial exploration to pixel perfect code. I’m able to incorporate those skills and experiences to bridge the gap between design and development. I enjoy working on projects that require me to push beyond my boundaries and acquire new skills and knowledge in order to succeed. I have extensive experience working within multidisciplinary teams and truly enjoy working with others.</p>
+                    <a style="color:#EA5439;"href="images/pangtay_resume_2021.pdf" target="_blank">RESUME</a>
                     <h3 style="text-align: initial; padding-top: 7em;">WHAT I LIKE.</h3>
-                    <p>User Interface Design, User Experience Design, Interaction Design, Prototyping, Front-end Development, Illustration, Microinteractions, and 3D Modeling. 
+                    <p>User Interface Design, User Experience Design, Interaction Design, Prototyping, Frontend Development, Illustration, Microinteractions, and 3D Modeling. 
                     </p>
                     <h3 style="text-align: initial; padding-top: 7em;">WHAT I LOVE.</h3>
                     <p>When I'm not in front of a computer screen, I'm probably rock climbing, reading a fantasy or Sci Fi book, watching anime, or drawing.
@@ -54,7 +53,7 @@
           <div class="marquee" data-direction='right'>
               <span><a   href="mailto:kpangtay@gmail.com" >Email</a></span>
               <span><a  href="https://www.linkedin.com/in/kpangtay/" >LinkedIn</a></span>
-              <span><a  href="images/Resume_Pangtay_2020.pdf" target="_blank" >Resume</a></span>
+              <span><a  href="images/pangtay_resume_2021.pdf" target="_blank" >Resume</a></span>
             </div>
             <div class="marquee" style="padding-bottom: 25vw;" data-direction='left'>
               <span><a  href="https://github.com/kpangtay">Github</a></span>
